spec/error_break_outside_loop.expected
Parse error: spec/error_break_outside_loop.kex:2:1: runtime error: 'break' used outside a loop
