spec/error_break_outside_loop.kex
# `break` outside any loop is a runtime error.
main do
  break
end
